--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quote-machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://khari998.github.io/QuoteMachine",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "react": "^16.8.5",
@@ -12,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,5 +24,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0"
+  }
 }
